
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; } ;
struct sockaddr {int dummy; } ;


 int accept (int,struct sockaddr*,int*) ;
 int exit (int) ;
 scalar_t__ getpeername (int,struct sockaddr*,int*) ;
 char* inet_ntoa (int ) ;
 int ntohs (int ) ;
 int perror (char*) ;
 int printf (char*,char*,int) ;

int client_accept( int listener )
{
  int s;
  struct sockaddr_in remoteaddr;
  int addrlen = sizeof(struct sockaddr_in);
  if ((s = accept(listener, (struct sockaddr *)&remoteaddr, &addrlen)) < 0)
  {
   perror("[X] accept() failed\n");
   exit ( 1 );
  }
  if (getpeername(s, (struct sockaddr *)&remoteaddr, &addrlen) < 0)
  {
   perror("[X] getpeername() failed\n");
   exit ( 1 );
  }
  printf("got connection from %s:%u\n", inet_ntoa(remoteaddr.sin_addr), ntohs(remoteaddr.sin_port));
  return ( s );
}
