; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_2274.c_client_accept.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_2274.c_client_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_in = type { i32, i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"[X] accept() failed\0A\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"[X] getpeername() failed\0A\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"got connection from %s:%u\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @client_accept(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_in, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 8, i32* %5, align 4
  %6 = load i32, i32* %2, align 4
  %7 = bitcast %struct.sockaddr_in* %4 to %struct.sockaddr*
  %8 = call i32 @accept(i32 %6, %struct.sockaddr* %7, i32* %5)
  store i32 %8, i32* %3, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = call i32 @perror(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @exit(i32 1) #3
  unreachable

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = bitcast %struct.sockaddr_in* %4 to %struct.sockaddr*
  %16 = call i64 @getpeername(i32 %14, %struct.sockaddr* %15, i32* %5)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = call i32 @perror(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %13
  %22 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i8* @inet_ntoa(i32 %23)
  %25 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %4, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @ntohs(i32 %26)
  %28 = call i32 @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i8* %24, i32 %27)
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @accept(i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @getpeername(i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1

declare dso_local i8* @inet_ntoa(i32) #1

declare dso_local i32 @ntohs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
